frontend/test/should_pass/attrib_021l.grg
using attrib_model_001;

rule r {
	nl : NLONG;
	-el:ELONG->;

	modify {
		eval {
			nl.a = 1;
			el.a = 2;

			nl.a = +nl.a;
			nl.a = -nl.a;
			nl.a = ~nl.a;
			nl.a = +nl.a + el.a;
			nl.a = -nl.a + el.a;
			nl.a = ~nl.a + el.a;
			nl.a = nl.a + +el.a;
			nl.a = nl.a + -el.a;
			nl.a = nl.a + ~el.a;

			nl.a = + + nl.a;
			nl.a = - - nl.a;
			nl.a = + + + nl.a;
			nl.a = - - - nl.a;

			nl.a = ~nl.a;
			nl.a = ~ ~nl.a;
			nl.a = ~ ~ ~nl.a;
			nl.a = ~ ~ ~ ~nl.a;

			nl.a = + + + + - +-+- - - + +-+- +- nl.a;
		}
	}
}

