frontend/test/should_fail/rhs_edge_evalhere.grg
using attrib_model_001;

rule r
{
	x:Node;

	modify {
		x -e:EINT-> x;

		evalhere {
			e.a = 42 + e.a;
		}
	}
}
